{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 591,
  "lineage": "3513fe22-d2bc-b402-447e-b889e25b993d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip_static_bastionhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.126.184.67",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-26T00:46:28.321-07:00",
            "id": "projects/case-study3-393407/regions/asia-southeast1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "case-study3-393407",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/addresses/ipv4-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/case-study3-393407/zones/asia-southeast1-a/instances/x-sin-bs-p-ap-8-s01"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "lb_ip_static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.197.142.114",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-26T00:46:28.555-07:00",
            "id": "projects/case-study3-393407/regions/asia-southeast1/addresses/lb-ip-static",
            "name": "lb-ip-static",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "case-study3-393407",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/addresses/lb-ip-static",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/forwardingRules/load-balancer"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_to_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-26T00:46:39.904-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/case-study3-393407/global/firewalls/allow-access-to-bastion-host",
            "log_config": [],
            "name": "allow-access-to-bastion-host",
            "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
            "priority": 1000,
            "project": "case-study3-393407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/firewalls/allow-access-to-bastion-host",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastionhost"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_to_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-26T00:46:40.005-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/case-study3-393407/global/firewalls/allow-access-to-webserver",
            "log_config": [],
            "name": "allow-access-to-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
            "priority": 1000,
            "project": "case-study3-393407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/firewalls/allow-access-to-webserver",
            "source_ranges": [
              "192.168.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "bastionhost"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-26T00:46:40.022-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/case-study3-393407/global/firewalls/firewall-rules-ssh",
            "log_config": [],
            "name": "firewall-rules-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
            "priority": 1000,
            "project": "case-study3-393407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/firewalls/firewall-rules-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "network_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2023-07-26T00:47:28.162-07:00",
            "id": "projects/case-study3-393407/regions/asia-southeast1/forwardingRules/load-balancer",
            "ip_address": "35.197.142.114",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "load-balancer",
            "network_tier": "PREMIUM",
            "port_range": "80-443",
            "project": "case-study3-393407",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/forwardingRules/load-balancer",
            "target": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/targetPools/lb-target-pool"
          },
          "dependencies": [
            "google_compute_address.lb_ip_static",
            "google_compute_http_health_check.lb_healthcheck",
            "google_compute_instance.web_server",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.first_private_subnet",
            "google_compute_target_pool.lb_target_pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.207.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-26T00:46:40.221-07:00",
            "id": "projects/case-study3-393407/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
            "prefix_length": 16,
            "project": "case-study3-393407",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/addresses/private-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-9-v20230711",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/zones/asia-southeast1-a/disks/x-sin-bs-p-ap-8-s01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/case-study3-393407/zones/asia-southeast1-a/instances/x-sin-bs-p-ap-8-s01",
            "instance_id": "3255430311205237144",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "t7PdWfJntSI=",
            "name": "x-sin-bs-p-ap-8-s01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.126.184.67",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
                "network_ip": "192.168.1.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/subnetworks/bastion-subnet",
                "subnetwork_project": "case-study3-393407"
              }
            ],
            "project": "case-study3-393407",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/zones/asia-southeast1-a/instances/x-sin-bs-p-ap-8-s01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastionhost"
            ],
            "tags_fingerprint": "d2dbr4NlgiY=",
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_address.ip_static_bastionhost",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.bastion_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-9-v20230711",
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/zones/asia-southeast1-a/disks/x-sin-wp-p-ap-8-s01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/case-study3-393407/zones/asia-southeast1-a/instances/x-sin-wp-p-ap-8-s01",
            "instance_id": "6399852709866724515",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "20GWO8yLZos=",
            "metadata_startup_script": "#! /bin/bash\n\nsudo su\n# mount and format data disk\nlsblk\nsudo mkfs.ext4 -m 0 -F -E lazy_itable_init=0,lazy_journal_init=0,discard /dev/sdb\nmkdir -p /data-mount\nmount -o discard,defaults /dev/sdb /data-mount\nchmod a+w+r /data-mount\n\n# auto mount when reboot vm\necho UUID=`sudo blkid -s UUID -o value /dev/sdb` /data-mount ext4 discard,defaults,nofail 0 2 | sudo tee -a /etc/fstab\nblkid -s UUID -o value /dev/sdb\n\n# install necessary package\ndnf i [...]
            "name": "x-sin-wp-p-ap-8-s01",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
                "network_ip": "192.168.3.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/subnetworks/server-subnet",
                "subnetwork_project": "case-study3-393407"
              }
            ],
            "project": "case-study3-393407",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/zones/asia-southeast1-a/instances/x-sin-wp-p-ap-8-s01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "webserver"
            ],
            "tags_fingerprint": "Z925uZZozhM=",
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.first_private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/case-study3-393407/global/networks/vpcnet-group3",
            "mtu": 1460,
            "name": "vpcnet-group3",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "case-study3-393407",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_ip_ranges": [
                  {
                    "range": "192.168.3.0/24"
                  }
                ],
                "asn": 64512,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-07-26T00:46:40.548-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/case-study3-393407/regions/asia-southeast1/routers/router-nat",
            "name": "router-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
            "project": "case-study3-393407",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/routers/router-nat"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "case-study3-393407/asia-southeast1/router-nat/cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "case-study3-393407",
            "region": "asia-southeast1",
            "router": "router-nat",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/subnetworks/server-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router_nat",
            "google_compute_subnetwork.first_private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-26T00:46:41.211-07:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/case-study3-393407/regions/asia-southeast1/subnetworks/bastion-subnet",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "bastion-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "case-study3-393407",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/subnetworks/bastion-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "first_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-26T00:46:41.653-07:00",
            "gateway_address": "192.168.3.1",
            "id": "projects/case-study3-393407/regions/asia-southeast1/subnetworks/server-subnet",
            "ip_cidr_range": "192.168.3.0/24",
            "name": "server-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "case-study3-393407",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/subnetworks/server-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "second_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-26T00:46:41.430-07:00",
            "gateway_address": "192.168.5.1",
            "id": "projects/case-study3-393407/regions/asia-southeast1/subnetworks/sql-subnet",
            "ip_cidr_range": "192.168.5.0/24",
            "name": "sql-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/global/networks/vpcnet-group3",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "case-study3-393407",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/case-study3-393407/regions/asia-southeast1/subnetworks/sql-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}